--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,10 @@
   width: 100%;
   margin-top: 0px;
 }
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
